v1.0.9 (2017.06.xx)
  - Perform immediate discovery of all local network resources (devices, lineups, recordings) during addon startup
  - Clear pending scheduled discovery tasks during addon stop and destroy operations
  - Prevent PVR triggers from being signaled by background discovery tasks still running during addon stop and destroy operations
  - Filter out DRM channels from Electronic Program Guide discovery change triggers; resolves CEpgContainer errors in log
  - Fix internal exception handling and return values returned from menu hooks

v1.0.8 (2017.05.22)
  - Filter out DRM channels from Channel Groups; resolves PVRTransferChannelGroupMember errors in log

v1.0.7 (2017.04.02)
  - Fix problem introduced in v1.0.4 causing all discovery tasks to be cancelled if devices/lineups change or certain settings are changed

v1.0.6 (2017.04.01)
  - Add "Use season/episode number as title for recordings" option
  - (Android) Initial release of modified Kodi APKs for Android ARM, ARM64 and x86 devices

v1.0.5 (2017.03.27)
  - Fix problem with legacy devices detected through HTTP discovery adding a phantom channel and skewing the lineups
  - Add "Stream LiveTV channels directly from tuner device(s)" advanced option
  - Remove Secure Sockets Layer (SSL) support -- unnecessary and potentially problematic for some Linux builds
  - (Linux) Restrict exported symbols to prevent name collisions with shared libraries
  - (Linux) Initial release for Linux ARM (armel), ARM (armhf) and ARM64 (aarch64) devices

v1.0.4 (2017.03.14)
  - Add "Use network broadcast for device discovery" option
  - Fix problem with Record Series and Record Once timers that overlap on an episode only exposing the Record Series Episode timer
  - Fix problem where only one episode of a Record Series timer rule was being exposed as a timer
  - Cancel discovery of extended (8 hour) Electronic Program Guide data when Kodi is exiting or the system is entering a sleep state