@@ -1,9 +1,12 @@
 v1.0.9 (2017.06.xx)
+  - Update SQLite engine to version 3.19.2
   - Perform immediate discovery of all local network resources (devices, lineups, recordings) during addon startup
   - Clear pending scheduled discovery tasks during addon stop and destroy operations
   - Prevent PVR triggers from being signaled by background discovery tasks still running during addon stop and destroy operations
   - Filter out DRM channels from Electronic Program Guide discovery change triggers; resolves CEpgContainer errors in log
   - Fix internal exception handling and return values returned from menu hooks
+  - Reduce database contention during operations that transfer data back to Kodi via callback functions
+  - Reduce SQLite busy handler wait period from 30 seconds to 5 seconds
 
 v1.0.8 (2017.05.22)
   - Filter out DRM channels from Channel Groups; resolves PVRTransferChannelGroupMember errors in log
